src/test/ui/issues/issue-42060.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-42060.rs:3:23
   |
LL |     let thing = ();
   |         ----- help: consider using `const` instead of `let`
LL |     let other: typeof(thing) = thing;
   |                       ^^^^^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-42060.rs:9:13
   |
LL |     let q = 1;
   |         - help: consider using `const` instead of `let`
LL |     <typeof(q)>::N
   |             ^ non-constant value

error[E0516]: `typeof` is a reserved keyword but unimplemented
  --> $DIR/issue-42060.rs:3:16
   |
LL |     let other: typeof(thing) = thing;
   |                ^^^^^^^^^^^^^ reserved keyword

error[E0516]: `typeof` is a reserved keyword but unimplemented
  --> $DIR/issue-42060.rs:9:6
   |
LL |     <typeof(q)>::N
   |      ^^^^^^^^^ reserved keyword

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0435, E0516.
For more information about an error, try `rustc --explain E0435`.
